[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cherrypick"
version = "0.1.0"
description = "AI-powered fake review detection for Google Reviews"
requires-python = ">=3.12,<3.13"
dependencies = [
    "crawl4ai>=0.6.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.0",
    "anthropic>=0.76.0",
    "sqlalchemy>=2.0.35",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.2.0",
    "scikit-learn>=1.8.0",
    "nltk>=3.9.0",
    "textblob>=0.18.0",
    "streamlit>=1.45.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["cherrypick*", "app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
